# earthquake

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
scripts/: start-bot-hidden.ps1  stop-bot.ps1
src/earthquake_bot/: alert_cards.py  config.py  main.py  map_shapes.py  models.py  service.py  service_admin.py  service_alerts.py  service_constants.py  service_text.py  storage.py  telegram_api.py  timezone_catalog.py  usgs.py  webhook_server.py
src/earthquake_bot/data/: map_shapes.json
tests/: test_alert_cards.py  test_config.py  test_main.py  test_service.py  test_storage.py  test_telegram_api.py  test_usgs.py
